# andromeda

./: Cargo.toml  README.md  rustfmt.toml
andromeda-common/: Cargo.toml
andromeda-common/src/: api.rs  config.rs  errors.rs  exports.rs  lib.rs
andromeda-common/src/api/: game_versions.rs
andromeda-common/src/config/: andromeda_config.rs  startup_config.rs
andromeda-common/src/utils/: mod.rs  win32.rs
andromeda-entry/: Cargo.toml
andromeda-entry/src/: entrypoint.rs  lib.rs  patches.rs  util.rs
andromeda-entry/src/entrypoint/: d3d11.rs  dinput8.rs
andromeda-entry/src/utils/: mod.rs
andromeda-entry/src/utils/win32/: dll.rs  iat.rs  mod.rs  module.rs  process.rs
andromeda-lib/: Cargo.toml
andromeda-lib/src/: exports.rs  lib.rs  mod.rs  util.rs
andromeda-lib/src/egui_backend/: mod.rs  win32_backend.rs
andromeda-lib/src/egui_backend/d3d11/: dx11_renderer.rs  mod.rs
andromeda-lib/src/hooks/: dx11.rs  mod.rs
andromeda-lib/src/internal/: interfaces.rs  mod.rs  swapchain_util.rs
andromeda-runner/: Cargo.toml
andromeda-runner/src/: main.rs
