[workspace]
resolver = "3"
members = ["andromeda-lib", "andromeda-runner", "andromeda-entry", "andromeda-common"]

[workspace.dependencies]
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.143"
log = "0.4.27"
humantime = "2.2.0"
fern = { version = "0.7.1", features = [ "date-based" ] }
chrono = "0.4.41"