[package]
name = "andromeda-common"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = ["Win32_Graphics_Dxgi"] }
min_hook_rs = "2.1.0"
dirs = "6.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }