[package]
name = "andromeda-entry"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
goblin = "0.10.1"
log = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }
chrono = { workspace = true }
min_hook_rs = "2.1.0"
once_cell = "1.21.3"
windows-sys = "0.60.2"
andromeda-common = { path = "../andromeda-common" }
libc = "0.2.175"
thiserror = "2.0.16"

[dependencies.windows]
version = "0.61.3"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_System_Memory",
  "Win32_System_WindowsProgramming"
]
