[package]
name = "andromeda-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "andromeda"
crate-type = ["cdylib"]

[dependencies]
andromeda-entry = { path = "../andromeda-entry" }
egui = "0.32.1"
minhook = "0.8.0"
once_cell = "1.21.3"

[dependencies.windows]
version = "0.61.3"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Diagnostics_Debug",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_Graphics_Dxgi"
]
